--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     font-family: "Roboto", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth
+}
+
+body {
+    max-width: 200vh;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -20,6 +29,14 @@ img {
 
 p {
     line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav__container {
@@ -69,6 +86,57 @@ li {
 .nav__link--primary:hover {
     text-decoration: none;
 }
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: red;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.menu--open .menu__backdrop {
+    display: flex;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+/* LANDING*/
 
 #landing {
     background-color: rgb(255, 235, 235);
@@ -123,6 +191,7 @@ button:active {
     padding: 12px 24px;
     font-size: 20px;
     border-radius: 8px;
+    border: none;
 }
 
 .header__img--wrapper {
@@ -141,6 +210,16 @@ button:active {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.no-cursor {
+    cursor: not-allowed;
 }
 
 /* HIGHLIGHTS */
@@ -180,7 +259,7 @@ button:active {
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
-    transform: translateY(100%);
+    transform: translateY(100%) rotate(180deg);
 }
 
 .highlight__wrapper {
@@ -217,4 +296,93 @@ button:active {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+}
+
+/* FEATURES*/
+
+#features {
+    padding-top: 8vw;
+    background-color: rgb(255, 235, 235);
+}
+
+.books {
+    display: flex;
+    flex-wrap: wrap;
+}    
+.book {
+    width: 25%;
+    padding: 24px;
+    
+}
+
+.book__img {
+    max-height: 380px;
+    transition: all 300ms ease;
+    cursor: not-allowed;
+}
+
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+/* Explore*/
+
+#explore {
+    background-color: rgb(255, 235, 235);
+}
+
+/* Footer*/
+
+footer {
+    background-color: black;
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__copyright,
+.footer__link {
+    color: #fff;
+}
+
+.footer__list {
+    margin: 20px 0 24px 0;
+}
+
+.footer__link {
+    padding: 0 8px;
 }
