--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ li {
     text-align: center;
     border: none;
     color: red;
+    display: none;
 }
 
 .menu__backdrop {
@@ -105,12 +106,19 @@ li {
     z-index: 100;
     display: flex;
     justify-content: center;
-    align-items: center;
-    display: none;
+    align-items: center;   
+    transition: opacity 500ms ease;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .menu--open .menu__backdrop {
-    display: flex;
+    visibility: visible;
+    opacity: 1;
+}
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
 }
 
 .menu__links {
@@ -264,6 +272,7 @@ button:active {
 
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
@@ -271,7 +280,6 @@ button:active {
     width: calc(100% / 3);
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
@@ -296,6 +304,7 @@ button:active {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 /* FEATURES*/
@@ -312,7 +321,10 @@ button:active {
 .book {
     width: 25%;
     padding: 24px;
-    
+    width: calc(100 / 4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .book__img {
@@ -335,6 +347,7 @@ button:active {
 .book__title {
     font-size: 20px;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .book__title:hover {
@@ -385,4 +398,53 @@ footer {
 
 .footer__link {
     padding: 0 8px;
+}
+
+/* Small phones, Tablets, Lg Smartphones */
+
+@media (max-width: 768px) {
+    .header__description {
+        padding: 0 24px;       
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+    .book {
+        width: 50%;
+    }
+
+}
+
+
+/* Small phones, Lg Smartphones */
+
+@media (max-width: 550px) {
+
+
+
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .highlight {
+        width: 100%;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+   
+    }
 }
